# ai-foundations

./: .gitignore  README.md  convert_docs_to_pdf.py  syllabus.md
01_architecture_of_data/: .gitignore  lab_tokenizer_dictionary.py  pyproject.toml  slides.html  tutorial.ipynb  verify_module.sh
01_architecture_of_data/docs/: 01_MODULE_SUMMARY.md  01_QUICK_REFERENCE.md  01_README.md
02_pythonic_patterns/: lab_infinite_data_loader.py  pyproject.toml  sample_corpus.txt  slides.html  tutorial.ipynb
02_pythonic_patterns/docs/: 02_QUICK_REFERENCE.md  02_README.md
03_thinking_in_arrays/: lab_the_matrix.py  pyproject.toml  slides.html  tutorial.ipynb
03_thinking_in_arrays/docs/: 03_QUICK_REFERENCE.md  03_README.md
04_vectorization_broadcasting/: inclass.ipynb  lab_forward_pass.py  pyproject.toml  slides.html  tutorial.ipynb
04_vectorization_broadcasting/docs/: 04_QUICK_REFERENCE.md  04_README.md
05_dataframes_series/: lab_dataset_detective.py  pyproject.toml  slides.html  tutorial.ipynb
05_dataframes_series/data/: llm_prompts.csv
05_dataframes_series/docs/: 05_QUICK_REFERENCE.md  05_README.md
06_cleaning_transformation/: .env.example  lab_the_curator.py  pyproject.toml  slides.html  tutorial.ipynb
06_cleaning_transformation/data/: dirty_dataset.csv
06_cleaning_transformation/docs/: 06_QUICK_REFERENCE.md  06_README.md
07_images_as_data/: .env.example  create_sample_images.py  lab_the_preprocessor.py  pyproject.toml  slides.html  test_module.py  tutorial.ipynb
07_images_as_data/docs/: 07_BUILD_REPORT.md  07_GETTING_STARTED.md  07_INDEX.md  07_MODULE_SUMMARY.md  07_QUICK_REFERENCE.md  07_README.md  07_TUTORIAL_GUIDE.md  07_TUTORIAL_QUICKSTART.md
08_capstone_pipeline/: create_sample_data.py  lab_research_pipeline.py  pyproject.toml  slides.html  tutorial.ipynb
08_capstone_pipeline/data/: manifest.csv
08_capstone_pipeline/docs/: 08_FINAL_ASSIGNMENT.md  08_QUICK_REFERENCE.md  08_README.md  08_RUBRIC.md  08_SETUP.md
notes/: expand_tutorial_slides.md
