[project]
name = "module-02-pythonic-patterns"
version = "0.1.0"
description = "Module 2: Pythonic Patterns for AI - Comprehensions & Generators"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
