[project]
name = "module-05-dataframes-series"
version = "0.1.0"
description = "Module 5: DataFrames & Series"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
